tdf#117505 RTF export: fix incorrect header distance for first/follow pages

In case the first and the follow page format has different header
distances, the DOC and DOCX import work with the distance from the first
page format when they take the last item from the MSWordSections
container at the end of the export.

RTF writes section info before the document content, and in case there
are separate first and follow page formats, then we work with the follow
format since commit 20a53cb9e9c7b797c091fe6ac6a34dfb28c61304
(INTEGRATION: CWS limerickfilterteam08 (1.16.32); FILE MERGED,
2003-09-01) as a fix for i#13107.

There is no perfect solution here, the sw doc model can store different
header distances for first and follow pages, while Word works with a
single distance. But RTF/DOCX/DOC import puts the relevant header
distance to the first page format and DOCX/DOC export reads the distance
from there, so be consistent and do the same in the RTF export as well.

This means the DOCX import -> RTF export -> RTF import sequence from the
bugreport will result in a correct header distance.

Change-Id: I3f1fe3080360702c41d680b8785cc3602e74685e