sw/source/filter/ww8/rtfexport.hxx
@@ -188,6 +188,8 @@ public:
     void InsStyle(sal_uInt16 nId, const OString& rStyle);
     OString* GetStyle(sal_uInt16 nId);
 
+    const SfxItemSet* GetFirstPageItemSet() { return m_pFirstPageItemSet; }
+
 private:
     void WriteFonts();
     void WriteStyles();
@@ -213,6 +215,8 @@ private:
     std::map<OUString, sal_uInt16> m_aRedlineTable;
     /// If set, then Strm() returns this tream, instead of m_pWriter's stream.
     std::unique_ptr<SvMemoryStream> m_pStream;
+    /// Item set of the first page during export of a follow page format.
+    const SfxItemSet* m_pFirstPageItemSet = nullptr;
 };
 
 #endif // INCLUDED_SW_SOURCE_FILTER_WW8_RTFEXPORT_HXX
